# component-cli

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE  README.md  action.yml  cli.html  design-system.html  docs.html  grpc.html  http.html  index.html  landing.html  schema.sql
.github/: CONTRIBUTING.md  copilot-instructions.md
crates/wasm-frontend-test/: Cargo.toml
crates/wasm-frontend-test/fixtures/registry/: wasi.toml
crates/wasm-frontend-test/src/: lib.rs
crates/wasm-frontend-test/tests/: snapshot.rs
crates/wasm-frontend-test/tests/snapshots/: snapshot__home.snap  snapshot__interface_wasi_http_types.snap  snapshot__module_sample_wasi_http_rust.snap  snapshot__namespace_ba.snap  snapshot__not_found.snap  snapshot__package_detail_sample_wasi_http_rust.snap  snapshot__search_http.snap  snapshot__world_wasi_http_proxy.snap
crates/wasm-manifest/: Cargo.toml
crates/wasm-manifest/src/: lib.rs  lockfile.rs  manifest.rs  validation.rs
docs/: architecture.md  usage.md
references/: design-system.html  holy-grail.html
registry/: a-skua.toml  aburan28.toml  azure-samples.toml  controlmcp.toml  cosmonic-labs.toml  dineshdb.toml  dufeutech.toml  fastertools.toml  fermyon.toml  greenticai.toml  hyper-mcp-rs.toml  hyperlight-dev.toml  jamesstocktonj1.toml  jcbhmr.toml  mattilsynet.toml  metent.toml  milky2018.toml  patterns.toml  querymt.toml  seamlezz.toml  spinframework.toml  thorstenhans.toml  twitchax.toml  wasmcloud.toml  wasmcp.toml  yieldspace.toml  yoshuawuyts.toml
spec/: database.md  frontend.md  resolution.md  wasm-cli.md
(+281 files in other folders)
